kubernetes/apps/changedetection/overlays/prod/chrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
spec:
  replicas: 0
  selector:
    matchLabels:
      app: chrome
  template:
    metadata:
      labels:
        app: chrome
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: chrome
          image: ghcr.io/browserless/chrome:v2.57.0@sha256:f4fcb054396a0339c97be88c89a7af6106c87a2d0ab51ffdde7966a151208802
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
          securityContext:
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              add: null
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 2Gi
              cpu: 1000m
---
apiVersion: v1
kind: Service
metadata:
  name: chrome
spec:
  selector:
    app: chrome
  ports:
    - port: 3000
      targetPort: 3000
